chore: 样例Bot代码