@@ -1,9 +1,8 @@
-```java
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
-public class UserBotImpl {
-    static class Cell {
+public class Bot {
+    public static class Cell {
         public int x, y;
 
         public Cell(int x, int y) {
@@ -12,14 +11,14 @@ public class UserBotImpl {
         }
     }
 
-    private boolean check_tail_increasing(int step) {  // 检验当前回合，蛇的长度是否增加
+    private static boolean check_tail_increasing(int step) {  // 检验当前回合，蛇的长度是否增加
         if (step <= 10) return true;
         return step % 3 == 1;
     }
 
-    public List<Cell> getCells(int sx, int sy, String steps) {
+    public static List<Cell> getCells(int sx, int sy, String steps) {
         steps = steps.substring(1, steps.length() - 1);
-        List<Cell> res = new ArrayList<>();
+        List<Cell> res = new LinkedList<>();
 
         int[] dx = {-1, 0, 1, 0}, dy = {0, 1, 0, -1};
         int x = sx, y = sy;
@@ -31,13 +30,20 @@ public class UserBotImpl {
             y += dy[d];
             res.add(new Cell(x, y));
             if (!check_tail_increasing(++step)) {
-                res.remove(0);
+                res.removeFirst();
             }
         }
         return res;
     }
 
-    public Integer nextMove(String input) {
+    public static Integer nextMove(String input) {
+//      getMapString() + "#" +
+//      me.getSx() + "#" +
+//      me.getSy() + "#(" +
+//      me.getStepsString() + ")#" +
+//      you.getSx() + "#" +
+//      you.getSy() + "#(" +
+//      you.getStepsString() + ")";
         String[] strs = input.split("#");
         int[][] g = new int[13][14];
         for (int i = 0, k = 0; i < 13; i++) {
@@ -59,8 +65,8 @@ public class UserBotImpl {
 
         int[] dx = {-1, 0, 1, 0}, dy = {0, 1, 0, -1};
         for (int i = 0; i < 4; i++) {
-            int x = aCells.get(aCells.size() - 1).x + dx[i];
-            int y = aCells.get(aCells.size() - 1).y + dy[i];
+            int x = aCells.getLast().x + dx[i];
+            int y = aCells.getLast().y + dy[i];
             if (x >= 0 && x < 13 && y >= 0 && y < 14 && g[x][y] == 0) {
                 return i;
             }
@@ -69,5 +75,11 @@ public class UserBotImpl {
         return 0;
     }
 
+    public static void main(String[] args) {
+        if (args.length == 0)
+            args = new String[]{"11111111111111110010000000011010000011000110001000000001100000000000011110001000001110000000000001110000010001111000000000000110000000010001100011000001011000000001001111111111111111#11#11#(00)#1#12#(23)"};
+//        System.out.println("args[0]: " + args[0]);
+        System.out.println(nextMove(args[0]));
+    }
+
 }
-```
